@@ -9,9 +9,11 @@ endif(COMMAND cmake_policy)
 include (CheckCXXCompilerFlag)
 include (MacroEnsureVersion)
 
+# Version numbering - should be bumped for each release
 set(BABEL_MAJ_VER   2)
 set(BABEL_MIN_VER   2)
 set(BABEL_PATCH_VER 0)
+set(OBVERSION ${BABEL_MAJ_VER}.${BABEL_MIN_VER}.${BABEL_PATCH_VER})
 if(WIN32)
   set(BABEL_LIBRARY   openbabel-2)
 else(WIN32)
@@ -89,7 +91,7 @@ if(NOT WIN32)
     }
    " SCANDIR_NEEDS_CONST)
 
-   set(OB_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/${LIB}/openbabel)
+   set(OB_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/${LIB}/openbabel/${OBVERSION})
 endif(NOT WIN32)
 
 # Add some visibility support when using GCC
