@@ -145,8 +145,8 @@ foreach(format ${formats})
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
                   RUNTIME DESTINATION bin
-                  LIBRARY DESTINATION ${LIB}/openbabel
-                  ARCHIVE DESTINATION ${LIB}/openbabel)
+                  LIBRARY DESTINATION ${LIB}/openbabel/${OBVERSION}
+                  ARCHIVE DESTINATION ${LIB}/openbabel/${OBVERSION})
   set_target_properties(${format} PROPERTIES
                         OUTPUT_NAME ${format}
                         PREFIX ""
@@ -158,9 +158,8 @@ foreach(format ${xml_formats})
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
                   RUNTIME DESTINATION bin
-                  LIBRARY DESTINATION ${LIB}/openbabel
-                  ARCHIVE DESTINATION ${LIB}/openbabel
-  )
+                  LIBRARY DESTINATION ${LIB}/openbabel/${OBVERSION}
+                  ARCHIVE DESTINATION ${LIB}/openbabel/${OBVERSION})
   set_target_properties(${format} PROPERTIES
                         OUTPUT_NAME ${format}
                         PREFIX ""
